--- a/README
+++ b/README
@@ -19,6 +19,5 @@ Running code:
 	*run the code by typing the following:
 	* single processor: ./main.exe namelist.run
 Contributing development:
-	* at the moment the code is under private repo with no development branches. Contact 
-		the code owner to contribute ideas. 
+	* Contact the code owner to contribute ideas. 
 	
